--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <link rel="stylesheet" href="/styles.6f236da0e9afef8cc917.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="/runtime.3255a2634fd5d43b217d.js" defer></script><script src="polyfills.00096ed7d93ed26ee6df.js" defer></script><script src="/main.9b4014483358f2bbf872.js" defer></script></body>
+<script src="runtime.3255a2634fd5d43b217d.js" defer></script>
+  <script src="polyfills.00096ed7d93ed26ee6df.js" defer></script>
+  <script src="main.9b4014483358f2bbf872.js" defer></script>
+  </body>
 </html>
