--- a/404.html
+++ b/404.html
@@ -10,11 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=spectral:wght@300;400;500&amp;display=swap" rel="stylesheet">
-  
-  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="styles.6f236da0e9afef8cc917.css"></head>
 <body class="mat-typography">
-  <app-root></app-root>
-<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.00096ed7d93ed26ee6df.js" defer></script><script src="main.fe94b235c33a7df5171a.js" defer></script></body>
+  
+  </body>
 </html>
