--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@300;400;500&display=swap" 
   rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=spectral:wght@300;400;500&display=swap" 
-  rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=spectral:wght@300;400;500&display=swap" 
+  rel="stylesheet"> -->
   
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
